ci: pull request template

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["yoshidan <naohiro.y@gmail.com>", "nvivot <vivot.nicolas@gmail.com>"]
 edition = "2021"
 repository = "https://github.com/nicolas-vivot/token-source/tree/main"
-keywords = ["authentication","token","oauth2", "idtoken","token-source"]
+keywords = ["authentication","token","token-source"]
 license = "MIT"
 readme = "README.md"
 description = "High level API for token source providers."
